# pocket-astrologer

./: .cursorrules  .gitignore  README.md  const.py  main.py  pyproject.toml  style.css  ui.py  utils.py
.streamlit/: config.toml
