[tool.poetry]
name = "pocket-astrologer"
version = "0.1.0"
description = ""
authors = ["Kelvin Ng <hoishing@gmail.com>"]
readme = "README.md"
package-mode = false
repository = "https://github.com/hoishing/pocket-astrologer"
homepage = "https://pocket-astrologer.streamlit.app"

[tool.poetry.dependencies]
python = "^3.12, <3.13"
streamlit = "^1.40.0"
streamlit-shortcuts = "^0.1.9"
natal = "^0.8.6"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "*"
watchdog = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
